--- a/src/sample/commandLineBasics/cd.fxml
+++ b/src/sample/commandLineBasics/cd.fxml
@@ -76,7 +76,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So now you know absolute file paths, you can use 'cd' to change directory.&#10;&#10;If you want to see all the files and other Directories inside your current one, type 'ls'." wrappingWidth="427.37451171875">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So now you know absolute file paths, you can use 'cd' to change directory.&#10;&#10;If you want to see all the files and other directories inside your current one, type 'ls'." wrappingWidth="427.37451171875">
                <font>
                   <Font size="15.0" />
                </font>
@@ -102,7 +102,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So now you are in /home/harry/Documents, inside this directory I have a folder called &quot;School&quot;.&#10;&#10;From inside Documents you can change into the &quot;School&quot; directory with:" wrappingWidth="465.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So now you are in /home/harry/Documents, inside this directory I have a folder called &quot;School&quot;.&#10;&#10;From inside Documents, you can change into the &quot;School&quot; directory with:" wrappingWidth="465.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -118,7 +118,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Because you were already in /home/harry/Documents and the &quot;School&quot; directory was already there, you didn't need the full, or Absolute path. &#10;&#10;Another example is if you were in /home/harry/Pictures and inside the Pictures Directory there was a folder called &quot;Holiday&quot; you could swap into Holiday with only only:" wrappingWidth="460.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Because you were already in /home/harry/Documents and the &quot;School&quot; directory was already there, you didn't need the full, or Absolute path. &#10;&#10;Another example is if you were in /home/harry/Pictures and inside the Pictures Directory there was a folder called &quot;Holiday&quot;, you could swap into Holiday with only only:" wrappingWidth="460.0">
                <font>
                   <Font size="15.0" />
                </font>
