--- a/src/sample/commandLineBasics/helpMan.fxml
+++ b/src/sample/commandLineBasics/helpMan.fxml
@@ -56,7 +56,7 @@
    <left>
       <VBox prefHeight="570.0" prefWidth="501.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="There are some great tools within GNU/Linux to help you find out more about a command or check what flags you need for them&#10;&#10;The help tool is a built in too that will give you help about bash commands. Such as echo, logout, pwd, etc." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="There are some great tools within GNU/Linux to help you find out more about a command or check what flags you need for them&#10;&#10;The help tool is a built-in tool that will give you help about bash commands; such as echo, logout, pwd, etc." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -71,7 +71,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It will give you a description and some options you can use when you run echo.&#10;&#10;For other executable programs the help comes after" wrappingWidth="462.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="It will give you a description and some options you can use when you run echo.&#10;&#10;For other executable programs, the help comes after" wrappingWidth="462.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -87,7 +87,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not every developer uses the help command with the program.&#10;&#10;But luckily there is a high chance of them having a manual! A man page is a manual similar to help that will tell you about the command." wrappingWidth="475.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not every developer uses the help command with the program.&#10;&#10;Luckily, there is a high chance of them having a manual! A man page is a manual similar to help that will tell you about the command." wrappingWidth="475.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -118,7 +118,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Man pages are the most helpful tool within GNU/Linux!&#10;&#10;There is an alternative to man pages called info. It isn't very widely adopted but it's worth knowing it exists.&#10;&#10;There are overlaps between these three such as bash&#10;" wrappingWidth="427.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Man pages are the most helpful tool within GNU/Linux!&#10;&#10;There is an alternative to man pages called info. It isn't very widely adopted but it's worth knowing it exists.&#10;&#10;There are overlaps between these three, such as bash&#10;" wrappingWidth="427.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -134,7 +134,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&#10;There are commands on all three for the same thing. It doesn't really matter which you use. Personal preference, although some users only use man for everything as it has pages for nearly everything" wrappingWidth="427.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&#10;There are commands on all three for the same thing, it doesn't really matter which you use. While personal preference, some users only use man for everything as it has pages for nearly everything" wrappingWidth="427.0">
                <font>
                   <Font size="15.0" />
                </font>
