--- a/src/sample/commandLineBasics/reMove.fxml
+++ b/src/sample/commandLineBasics/reMove.fxml
@@ -59,7 +59,7 @@
    <left>
       <VBox prefHeight="618.0" prefWidth="501.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can now make files and directories, but what about deleting them?&#10;&#10;To delete files you use the rm (ReMove) command. Be careful, because there is no Recycle Bin here, once you delete a file it is gone. &#10;&#10;To delete a file use the rm command and then the name of the file" wrappingWidth="478.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can now make files and directories, but what about deleting them?&#10;&#10;To delete files, you use the rm (ReMove) command. Be careful, because there is no Recycle Bin here; once you delete a file it is gone. &#10;&#10;To delete a file use the rm command and then the name of the file" wrappingWidth="478.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -74,7 +74,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can’t just delete any and every file, luckily there are things in place to stop that, files can be “Write protected” and will ask for confirmation before you delete them.&#10;&#10;If you know for sure you want to delete the file and don’t care if it’s protected or not you can use the ‘-f’ flag, meaning force. This will delete the file instantly.&#10;" wrappingWidth="478.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can’t just delete any and every file, luckily there are things in place to stop that. Files can be “Write protected” and will ask for confirmation before you delete them.&#10;&#10;If you know for sure you want to delete the file and don’t care if it’s protected or not, you can use the ‘-f’ flag, meaning force, as this will delete the file instantly.&#10;" wrappingWidth="478.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -124,7 +124,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="If the directory is empty you can use the ‘rmdir’ (ReMove DIRectory) command." wrappingWidth="478.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="If the directory is empty, you can use the ‘rmdir’ (ReMove DIRectory) command." wrappingWidth="478.0">
                <font>
                   <Font size="15.0" />
                </font>
