--- a/src/sample/commandLineBasics/touch.fxml
+++ b/src/sample/commandLineBasics/touch.fxml
@@ -66,7 +66,7 @@
    <left>
       <VBox prefHeight="574.0" prefWidth="469.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can make folders, now it's time to learn how to make files to go in them.&#10;&#10;Touch is a command originally used to change the timestamp on an existing file, such as when it was created. But run the command with a new filename and it will create a file instead of changing the timestamp (It can't change the timestamp is there isn't a file there!)&#10;&#10;Of course there are other ways to create files, but this is the quickest and easiest." wrappingWidth="424.37109375">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can make folders, now it's time to learn how to make files to go in them.&#10;&#10;Touch is a command originally used to change the timestamp on an existing file, such as when it was created. Run the command with a new filename and it will create a file instead of changing the timestamp (It can't change the timestamp is there isn't a file there!)&#10;&#10;Of course there are other ways to create files, but this is the quickest and easiest." wrappingWidth="424.37109375">
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
@@ -82,7 +82,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="With that one command above a file is created. Quick and east. You can also do multiple files at the same time, just leave a space between the name of each file.&#10;&#10;Time to try it out!&#10;&#10;" wrappingWidth="424.37109375">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="With that one command above a file is created: Quick and easy. You can also do multiple files at the same time, just leave a space between the name of each file.&#10;&#10;Time to try it out!&#10;&#10;" wrappingWidth="424.37109375">
                <font>
                   <Font size="15.0" />
                </font>
