--- a/src/sample/lessons.fxml
+++ b/src/sample/lessons.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.lessonsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.lessonsController">
    <bottom>
       <HBox style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -68,10 +68,10 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </ImageView>
-            <HBox prefHeight="32.0" prefWidth="352.0">
+            <HBox prefHeight="98.0" prefWidth="377.0">
                <children>
                   <Region prefHeight="77.0" prefWidth="88.0" />
-                  <Button fx:id="practiceTestBtn" mnemonicParsing="false" onAction="#practiceTestBtnClick" prefHeight="37.0" prefWidth="198.0" text="Practice test">
+                  <Button fx:id="practiceTestBtn" mnemonicParsing="false" onAction="#practiceTestBtnClick" prefHeight="37.0" prefWidth="176.0" text="Post-Learnix Test">
                      <HBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </HBox.margin>
