--- a/src/sample/permissions/modifyingPermissions.fxml
+++ b/src/sample/permissions/modifyingPermissions.fxml
@@ -74,7 +74,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This will add the execute permissions on to a file for your current user. It's the same for other permissions too." wrappingWidth="470.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This will add the execute permissions on to a file for your current user, it's the same for other permissions too." wrappingWidth="470.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -90,7 +90,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To remove permissions it is exactly the same but with a minus instead of a plus.&#10;&#10;To specify if you want it to be applied for User, Group, and/or Other, just put the letter in front of the +/- symbol." wrappingWidth="470.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To remove permissions, it is exactly the same but with a minus instead of a plus.&#10;&#10;To specify if you want it to be applied for User, Group, and/or Other, just put the letter in front of the +/- symbol." wrappingWidth="470.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -129,7 +129,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can also change permissions another way, using a numerical format. Instead of using r, w, or x you can use numbers.&#10;&#10;The numerical representations are:&#10;&#10;4: read permission&#10;2: write permission&#10;1: execute permission&#10;&#10;So here is an example:" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can also change permissions another way, using a numerical format, instead of using r, w, or x you can use numbers.&#10;&#10;The numerical representations are:&#10;&#10;4: read permission&#10;2: write permission&#10;1: execute permission&#10;&#10;So here is an example:" wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -145,7 +145,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="So the 755 covers permissions for all the groups at once. The first number is your user, the second number is for your group, and 5 is other permissions.&#10;&#10;7 and 5 aren't on the list I hear you ask, well you have to add upp the 3 numbers to work out the permissions. &#10;&#10;4+2+1 = 7, so the user has all permissions, 4+1 = 5, so the Group has read and execute permissions, and same again for Other permissions." wrappingWidth="456.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="So the 755 covers permissions for all the groups at once. The first number is your user, the second number is for your group, and 5 is other permissions.&#10;&#10;7 and 5 aren't on the list I hear you ask, well you have to add up the 3 numbers to work out the permissions. &#10;&#10;4+2+1 = 7, so the user has all permissions, 4+1 = 5, so the Group has read and execute permissions, and same again for Other permissions." wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
