--- a/src/sample/permissions/permissions.fxml
+++ b/src/sample/permissions/permissions.fxml
@@ -61,7 +61,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Every single file within the system will have different permissions. &#10;&#10;Such as, in a Hostpital, Doctors would be able to view their patients record on the system whereas the people working at the reception counter might not be able to.&#10;&#10;Permissions seem complicated at first but are actually rather easy, permissions are &#10;&#10;r: Readable&#10;w: Writable&#10;x: eXecutable&#10;-: empty&#10;&#10;Each individual user has permissions, but also certain groups will have permissions, group permissions are useful because instead of updating each and every individual to access a file, for example, students and their homework, all they have to do is allow the Students group to access the file." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Every single file within the system will have different permissions. &#10;&#10;Such as, in a Hospital, Doctors would be able to view their patient's record on the system, whereas the people working at the reception counter might not be able to.&#10;&#10;Permissions seem complicated at first but are actually rather easy, permissions are &#10;&#10;r: Readable&#10;w: Writable&#10;x: eXecutable&#10;-: empty&#10;&#10;Each individual user has permissions, but also certain groups will have permissions. Group permissions are useful because instead of updating each and every individual to access a file, for example, students and their homework, all they have to do is allow the Students group access to the file." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -91,7 +91,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="There are four parts to the permissions of a file:&#10;The filetype, the 'd' stands to directory, whereas the '-' is a regular file&#10;The next rest are grouped into three parts and each part is 3 bits.&#10;It starts off with the user's individual permissions, then their groups permissions, then any other permissions (Other users). &#10;Lets look at the permissions for the Microwave file." wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="There are four parts to the permissions of a file:&#10;The filetype, the 'd' stands to directory, whereas the '-' is a regular file&#10;The next rest are grouped into three parts and each part is 3 bits.&#10;It starts off with the user's individual permissions, then their group's permissions, then any other permissions (Other users). &#10;Lets look at the permissions for the Microwave file." wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -107,7 +107,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="As you can see, the first group has a '-' showing it is not a directory, it is a normal file. Then inside the user's permissions you can see 'rw-' meaning the user can read the file, they can modify the file and save the file, but they can not execute the file. This last one is only important if you need to execute a file, whereas this is a text document so there isn't actually anything to execute.&#10;&#10;The groups permissions are also 'rw-', so if the user didn't have permission to write over the file but the group had the permissions, they could still do it.&#10;&#10;The other permissions (everyone else) are only 'r--'." wrappingWidth="456.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="As you can see, the first group has a '-' showing it is not a directory, it is a normal file. Then inside the user's permissions, you can see 'rw-' meaning the user can read the file, they can modify the file and save the file, but they can not execute the file: This last one is only important if you need to execute a file, whereas this is a text document so there isn't actually anything to execute.&#10;&#10;The group's permissions are also 'rw-', so if the user didn't have permission to write over the file but the group had the permissions, they could still do it.&#10;&#10;The other permissions (everyone else) are only 'r--'." wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
