--- a/src/sample/systemPackages/dependencies.fxml
+++ b/src/sample/systemPackages/dependencies.fxml
@@ -59,7 +59,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Packages can’t always run by themselves, they often need dependencies to help them run. &#10;&#10;Sometimes when you install programs, they rely on other programs to work. These other programs are called dependencies. For example, if a developer wanted to create an instant messenger application and wants to encrypt their messages between users, instead of having to create the encryption themselves they can use a package someone else has written that will do them encryption for them. So, you download their messeaging application but you also need to download the package to encrypt the message, the instant messenger is dependent on the encryption program.&#10;" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Packages can’t always run by themselves, they often need dependencies to help them run. &#10;&#10;Sometimes, when you install programs, they rely on other programs to work. These other programs are called dependencies. For example, if a developer wanted to create an instant messenger application and encrypt their messages between users, instead of having to create the encryption themselves, they can use a package someone else has written that will do the encryption for them. So, you download their messeaging application but you also need to download the package to encrypt the message, the instant messenger is dependent on the encryption program.&#10;" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -84,7 +84,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="When you go to install software from the repository, the system installs the program, if it notices it is dependent on another program it will install both at the same same so you don’t have to install it yourself. &#10;&#10;" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="When you go to install software from the repository, the system installs the program. If it notices it is dependent on another program, it will install both at the same time so you don’t have to install it yourself. &#10;&#10;" wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
