--- a/src/sample/usersAndGroups/etcGroups.fxml
+++ b/src/sample/usersAndGroups/etcGroups.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.etcGroupController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.etcGroupsController">
    <top>
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -24,7 +24,7 @@
                <menus>
                   <Menu mnemonicParsing="false" text="File">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Learnix Website" />
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
                         <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
                      </items>
                   </Menu>
@@ -36,7 +36,7 @@
                </VBox.margin></Button>
             <Label text="/etc/group" textFill="WHITE">
                <font>
-                  <Font size="24.0" />
+                  <Font size="25.0" />
                </font>
                <VBox.margin>
                   <Insets />
@@ -59,57 +59,8 @@
          </children>
       </HBox>
    </bottom>
-   <left>
-      <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="The /etc/group file contains attributes about groups, such as which user is in which group.&#10;&#10;The same as the other two, /etc/passwd and /etc/shadow, /etc/group has one line, except each line is for the group instead of user, each line has multiple fields seperated by colons (:)." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
-               <font>
-                  <Font size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin></Text>
-            <ImageView fitHeight="168.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../Assets/groupFile.png" />
-               </image>
-               <VBox.margin>
-                  <Insets bottom="30.0" left="50.0" right="30.0" top="30.0" />
-               </VBox.margin>
-            </ImageView>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1: Group Name&#10;&#10;2: Group Password, this isn't used so instead it shows an 'x'.&#10;&#10;3: Group ID (GID), each group has it's own unique ID.&#10;&#10;4: Group list, this displays a list of usernames that are members of the group, each username is seperated by a comma" wrappingWidth="470.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Text>
-            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="130.0" text="Back">
-               <padding>
-                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-         </BorderPane.margin>
-         <padding>
-            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-         </padding>
-      </VBox>
-   </left>
    <right>
-      <VBox prefHeight="572.0" prefWidth="505.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-         </BorderPane.margin>
-         <padding>
-            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-         </padding>
+      <VBox prefHeight="573.0" prefWidth="497.0" BorderPane.alignment="CENTER">
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Using what you learnt from the previous pages, how would you access and read the contents of /etc/group?" wrappingWidth="456.0">
                <font>
@@ -140,7 +91,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </Label>
-                  <Region prefHeight="137.0" prefWidth="198.0" />
+                  <Region prefHeight="0.0" prefWidth="198.0" />
                   <Label fx:id="CorrectLbl" prefHeight="40.0" prefWidth="108.0" text="Correct!" textFill="WHITE">
                      <font>
                         <Font size="20.0" />
@@ -151,6 +102,7 @@
                   </Label>
                </children>
             </HBox>
+            <Region prefHeight="23.0" prefWidth="497.0" />
             <Label fx:id="remSudo" prefHeight="40.0" prefWidth="353.0" text="Remember sudo!" textFill="WHITE">
                <font>
                   <Font size="20.0" />
@@ -165,7 +117,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </Button>
-            <Region prefHeight="148.0" prefWidth="480.0" />
+            <Region prefHeight="129.0" prefWidth="497.0" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="94.0" prefWidth="877.0" text="Congratulations you have completed this section! &#10;Back to lessons" textAlignment="CENTER">
@@ -181,4 +133,42 @@
          </children>
       </VBox>
    </right>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="The /etc/group file contains attributes about groups, such as which user is in which group.&#10;&#10;The same as the other two, /etc/passwd and /etc/shadow, /etc/group has one line, except each line is for the group instead of user, each line has multiple fields seperated by colons (:)." wrappingWidth="492.58203125">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <ImageView fitHeight="162.0" fitWidth="353.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Assets/groupFile.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="50.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </ImageView>
+            <Text fill="WHITE" layoutX="15.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1: Group Name&#10;&#10;2: Group Password, this isn't used so instead it shows an 'x'.&#10;&#10;3: Group ID (GID), each group has it's own unique ID.&#10;&#10;4: Group list, this displays a list of usernames that are members of the group, each username is seperated by a comma" wrappingWidth="492.58203125">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="130.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+   </left>
 </BorderPane>
