--- a/src/sample/usersAndGroups/usersAndGroups.fxml
+++ b/src/sample/usersAndGroups/usersAndGroups.fxml
@@ -61,7 +61,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="In every operating system there are users and there are also groups. The system has these soley for permissions. Such as when accessing files, if they belong to James you don't want Janice to see or access them. &#10;&#10;Or you want a group of teachers to access the homework answer files but not the group of students.&#10;&#10;Each user has their own &quot;home&quot; directory. Each Documents and Download and Videos folder is separate for each user. " wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="In every operating system, there are users and there are also groups. The system has these soley for permissions, such as when accessing files. &#10;&#10;For example, if they belong to James, you don't want Janice to see or access them. &#10;&#10;Another example is if you want a group of teachers to access the homework answer files but not the group of students.&#10;&#10;Each user has their own &quot;home&quot; directory: Documents, Download and Video folders are separate for each user. " wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -76,7 +76,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This is where you'll find your home directory.&#10;&#10;There are a special user within GNU/Linux though, called root or superuser. Root is one of the most important things within the system, it is the most powerful user and can access any file and run or close any software. &#10;&#10;Because root is so powerful it's dangerous to use root all the time as you may break the system, or if someone gets access to root on your machine they could damage it.&#10;" wrappingWidth="470.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This is where you'll find your home directory.&#10;&#10;There is a special user within GNU/Linux though, called root or superuser. Root is one of the most important things within the system, it is the most powerful user and can access any file and run or close any software. &#10;&#10;Because root is so powerful, it's dangerous to use root all the time as you may break the system, or if someone gets access to root on your machine, they could damage it.&#10;" wrappingWidth="470.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -102,7 +102,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So you want to access a file, you need to use root to access the file but you are on your own account? Luckily users can run a command as root on their own user. &#10;&#10;Sudo (Super User DO), is a command that gives you one time access to run a file as root as long as you have been given the permission. If you installed the OS yourself you'll already have it, if not the administrator of the system has to add you.&#10;&#10;So lets say you wanted to access a protected file, such as /etc/shadow" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So you want to access a file, you need to use root to access the file but you are on your own account? Luckily, users can run a command as root on their own user. &#10;&#10;Sudo (Super User DO), is a command that gives you one-time access to run a file as root as long as you have been given the permission. If you have installed Ubuntu, you'll already have it. If not, the administrator of the system has to add you. If you have Debian or a Red Hat based OS, you have to log in as root and add yourself to the sudoers file, or get an administrator to do it for you.&#10;&#10;So lets say you wanted to access a protected file, such as /etc/shadow" wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
